--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,9 @@ services:
     command: >
       "
         aws --endpoint-url=http://localstack:4566 s3api create-bucket --bucket my-bucket --region us-east-1
+        aws --endpoint-url=http://localstack:4566 s3 cp /aws/1.jpg s3://my-bucket/;
+        aws --endpoint-url=http://localstack:4566 s3 cp /aws/2.jpg s3://my-bucket/;
+        aws --endpoint-url=http://localstack:4566 s3 cp /aws/3.jpg s3://my-bucket/;
         aws --endpoint-url=http://localstack:4566 s3api ls s3://my-bucket --recursive --human-readable --summarize
       "
 
