--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -47,6 +47,7 @@
 		"@tanstack/react-query-devtools": "^5.59.19",
 		"@techstark/opencv-js": "^4.10.0-release.1",
 		"@types/mdx": "^2.0.13",
+		"@types/react-window": "^1.8.8",
 		"axios": "^1.7.7",
 		"better-auth": "^0.7.5",
 		"biome": "^0.2.2",
@@ -54,6 +55,7 @@
 		"clsx": "^2.1.1",
 		"copy-to-clipboard": "^3.3.3",
 		"date-fns": "^3.6.0",
+		"fast-deep-equal": "^3.1.3",
 		"framer-motion": "^11.11.11",
 		"geist": "^1.3.1",
 		"immer": "^10.1.1",
@@ -69,6 +71,7 @@
 		"react-dropzone": "^14.3.5",
 		"react-hook-form": "^7.53.1",
 		"react-query": "^3.39.3",
+		"react-window": "^1.8.11",
 		"reactflow": "^11.11.4",
 		"recharts": "^2.13.2",
 		"socket.io-client": "^4.8.1",
