--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
   #     co.elastic.logs/json.expand_keys: true
   #   environment:
   #     - discovery.type=single-node
-  #     - xpack.security.enabled=false
+  #     - xpack.security.enabled=true
 
   # kibana:
   #   image: kibana:8.16.2
