--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -24,6 +24,7 @@
 		"@neondatabase/serverless": "^0.9.5",
 		"@testcontainers/postgresql": "^10.18.0",
 		"amqplib": "^0.10.5",
+		"axios": "^1.8.2",
 		"better-auth": "^1.1.16",
 		"drizzle-kit": "^0.30.4",
 		"drizzle-orm": "^0.38.4",
