--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -58,12 +58,14 @@
 		"fast-deep-equal": "^3.1.3",
 		"framer-motion": "^11.11.11",
 		"geist": "^1.3.1",
+		"gray-matter": "^4.0.3",
 		"immer": "^10.1.1",
 		"lucide-react": "^0.479.0",
 		"mini-svg-data-uri": "^1.4.4",
 		"negotiator": "^1.0.0",
 		"next": "^14.2.23",
 		"next-intl": "^3.24.0",
+		"next-mdx-remote": "^5.0.0",
 		"next-themes": "^0.4.3",
 		"react": "^18.3.1",
 		"react-day-picker": "^8.10.1",
@@ -74,6 +76,7 @@
 		"react-window": "^1.8.11",
 		"reactflow": "^11.11.4",
 		"recharts": "^2.13.2",
+		"rehype-slug": "^6.0.0",
 		"socket.io-client": "^4.8.1",
 		"storybook": "^8.4.1",
 		"tailwind-merge": "^2.5.4",
