--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -26,7 +26,8 @@
 		"**/*.ts",
 		"**/*.tsx",
 		".next/types/**/*.ts",
-		"src/env.mjs"
+		"src/env.mjs",
+		"**/*.mdx"
 	],
 	"exclude": ["node_modules"]
 }
