--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -62,6 +62,7 @@
 		"immer": "^10.1.1",
 		"lucide-react": "^0.479.0",
 		"mini-svg-data-uri": "^1.4.4",
+		"nanoid": "^5.1.4",
 		"negotiator": "^1.0.0",
 		"next": "^14.2.23",
 		"next-intl": "^3.24.0",
