--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -94,6 +94,7 @@
 		"@storybook/nextjs": "^8.4.1",
 		"@storybook/react": "^8.4.1",
 		"@storybook/test": "^8.4.1",
+		"@types/lodash.debounce": "^4.0.9",
 		"@types/negotiator": "^0.6.3",
 		"@types/node": "^20.17.5",
 		"@types/react": "^18.3.12",
