--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -51,7 +51,7 @@
 		"axios": "^1.7.7",
 		"better-auth": "^0.7.5",
 		"biome": "^0.2.2",
-		"class-variance-authority": "^0.7.0",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"copy-to-clipboard": "^3.3.3",
 		"date-fns": "^3.6.0",
@@ -61,7 +61,6 @@
 		"gray-matter": "^4.0.3",
 		"immer": "^10.1.1",
 		"lucide-react": "^0.479.0",
-		"mini-svg-data-uri": "^1.4.4",
 		"nanoid": "^5.1.4",
 		"negotiator": "^1.0.0",
 		"next": "^14.2.23",
@@ -80,8 +79,8 @@
 		"rehype-slug": "^6.0.0",
 		"socket.io-client": "^4.8.1",
 		"storybook": "^8.4.1",
-		"tailwind-merge": "^2.5.4",
-		"tailwindcss-animate": "^1.0.7",
+		"tailwind-merge": "^2.6.0",
+		"tw-animate-css": "^1.2.4",
 		"zod": "^3.23.8",
 		"zustand": "^5.0.3"
 	},
@@ -94,13 +93,14 @@
 		"@storybook/nextjs": "^8.4.1",
 		"@storybook/react": "^8.4.1",
 		"@storybook/test": "^8.4.1",
+		"@tailwindcss/postcss": "^4.0.14",
 		"@types/lodash.debounce": "^4.0.9",
 		"@types/negotiator": "^0.6.3",
 		"@types/node": "^20.17.5",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"postcss": "^8.4.47",
-		"tailwindcss": "^3.4.14",
+		"tailwindcss": "^4.0.14",
 		"typescript": "^5.6.3"
 	}
 }
