--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -41,4 +41,4 @@ S3_DEVELOPMENT_ENDPOINT=http://localhost:4566
 
 # Python Server
 MAX_RETRY_COUNT=3
-PYTHON_SERVER_URL=http://something:8000
+PYTHON_SERVER_URL=http://host.docker.internal:8000
