--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -75,6 +75,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
+    "react-intersection-observer": "^9.16.0",
     "react-query": "^3.39.3",
     "react-virtuoso": "^4.12.5",
     "reactflow": "^11.11.4",
