--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,30 +20,31 @@
 		"@bogeychan/elysia-logger": "^0.1.8",
 		"@elysiajs/cors": "^1.2.0",
 		"@elysiajs/static": "^1.2.0",
-		"@elysiajs/swagger": "^1.2.0",
+		"@elysiajs/swagger": "^1.2.2",
 		"@neondatabase/serverless": "^0.9.5",
-		"@testcontainers/postgresql": "^10.18.0",
-		"amqplib": "^0.10.5",
+		"@testcontainers/postgresql": "^10.24.2",
+		"amqplib": "^0.10.7",
 		"axios": "^1.8.4",
-		"better-auth": "^1.1.16",
-		"drizzle-kit": "^0.30.4",
+		"better-auth": "^1.2.7",
+		"drizzle-kit": "^0.30.6",
 		"drizzle-orm": "^0.38.4",
-		"drizzle-typebox": "^0.3.0",
+		"drizzle-typebox": "^0.3.2",
 		"elysia": "latest",
-		"pg": "^8.13.1",
+		"pg": "^8.14.1",
 		"pino-elasticsearch": "^8.1.0",
 		"pino-pretty": "^11.3.0",
 		"pino-roll": "^2.2.0",
 		"postgres": "^3.4.5",
 		"redis": "^4.7.0",
 		"sharp": "^0.33.5",
-		"uuid": "^11.0.5",
-		"zod": "^3.24.1"
+		"uuid": "^11.1.0",
+		"zod": "^3.24.3"
 	},
 	"devDependencies": {
-		"@better-auth-kit/tests": "^0.1.2",
-		"@types/amqplib": "^0.10.6",
-		"@types/pg": "^8.11.11",
+		"@better-auth-kit/tests": "^0.1.3",
+		"@types/amqplib": "^0.10.7",
+		"@types/pg": "^8.11.13",
+		"better-sqlite3": "^11.9.1",
 		"bun-types": "latest"
 	},
 	"module": "src/index.js"
