--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -27,7 +27,7 @@
 		"@radix-ui/react-checkbox": "^1.1.4",
 		"@radix-ui/react-collapsible": "^1.1.3",
 		"@radix-ui/react-context-menu": "^2.2.5",
-		"@radix-ui/react-dialog": "^1.1.6",
+		"@radix-ui/react-dialog": "^1.1.11",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-navigation-menu": "^1.2.1",
@@ -37,7 +37,7 @@
 		"@radix-ui/react-select": "^2.1.4",
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slider": "^1.2.3",
-		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-slot": "^1.2.0",
 		"@radix-ui/react-switch": "^1.1.2",
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@radix-ui/react-toast": "^1.2.2",
@@ -56,6 +56,7 @@
 		"biome": "^0.2.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
 		"copy-to-clipboard": "^3.3.3",
 		"date-fns": "^3.6.0",
 		"fast-deep-equal": "^3.1.3",
