--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -141,3 +141,14 @@ services:
       - 3000:3000
     depends_on:
       - backend_app
+
+  ai-service:
+    container_name: ai_service
+    build:
+      context: ./apps/ai-service
+      dockerfile: dev.Dockerfile
+    volumes:
+      - .:/app
+    ports:
+      - "8000:8000"
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
