--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -148,7 +148,7 @@ services:
       context: ./apps/ai-service
       dockerfile: dev.Dockerfile
     volumes:
-      - .:/app
+      - ./apps/ai-service:/app
     ports:
       - "8000:8000"
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
