--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,7 +4,7 @@
 	"scripts": {
 		"test": "bun test",
 		"dev": "bun run --hot src/index.ts",
-		"build": "bun build --compile --minify-whitespace --minify-syntax --external pg --target bun --outfile server ./src/index.ts",
+		"build": "bun build ./src/index.ts",
 		"generate:auth": "bunx @better-auth/cli@latest generate",
 		"studio": "drizzle-kit studio",
 		"generate": "drizzle-kit generate",
@@ -17,10 +17,10 @@
 		"migrate": "drizzle-kit migrate"
 	},
 	"dependencies": {
-		"@bogeychan/elysia-logger": "^0.1.8",
-		"@elysiajs/cors": "^1.2.0",
-		"@elysiajs/static": "^1.2.0",
-		"@elysiajs/swagger": "^1.2.2",
+		"@bogeychan/elysia-logger": "0.1.8",
+		"@elysiajs/cors": "1.2.0",
+		"@elysiajs/static": "1.2.0",
+		"@elysiajs/swagger": "1.2.2",
 		"@neondatabase/serverless": "^0.9.5",
 		"@testcontainers/postgresql": "^10.25.0",
 		"amqplib": "^0.10.8",
@@ -29,7 +29,7 @@
 		"drizzle-kit": "^0.30.6",
 		"drizzle-orm": "^0.38.4",
 		"drizzle-typebox": "^0.3.2",
-		"elysia": "^1.2.5",
+		"elysia": "1.2.5",
 		"pg": "^8.15.6",
 		"pino-elasticsearch": "^8.1.0",
 		"pino-pretty": "^11.3.0",
